# vscode-atomic

./: package.json
.atomic/: settings.json
.claude/: settings.json
.github/workflows/: pr-linux-test.yml  pr.yml
extensions/copilot/.eslintplugin/: index.ts
research/docs/: 2026-03-18-atomic-cli-vscode-extension-research.md  2026-03-18-vscode-extension-api-deepwiki.md  2026-03-18-vscode-extension-examples-deepwiki.md  2026-03-18-vscode-first-extension-guide.md  2026-04-27-research-what-it-would-take-to.md  2026-05-01-research-what-it-would-take-to.md  2026-05-11-research-what-it-would-take-to.md
research/docs/.deep-research-1777304708662/: analyzer-10.md  analyzer-11.md  analyzer-14.md  analyzer-21.md  analyzer-22.md  analyzer-24.md  analyzer-25.md  analyzer-26.md  analyzer-27.md  analyzer-31.md  analyzer-32.md  analyzer-34.md  analyzer-35.md  analyzer-38.md  analyzer-39.md  analyzer-41.md  analyzer-42.md  analyzer-43.md  analyzer-44.md  analyzer-45.md  analyzer-47.md  analyzer-48.md  analyzer-51.md  analyzer-52.md  analyzer-53.md  analyzer-54.md  analyzer-55.md  analyzer-56.md  analyzer-57.md  analyzer-58.md  analyzer-59.md  analyzer-6.md  analyzer-60.md  analyzer-61.md  analyzer-62.md  analyzer-63.md  analyzer-64.md  analyzer-65.md  analyzer-66.md  analyzer-67.md  (+308 more)
research/docs/.deep-research-1777659524619/: analyzer-16.md  analyzer-17.md  analyzer-18.md  analyzer-19.md  analyzer-20.md  analyzer-26.md  analyzer-41.md  analyzer-43.md  analyzer-45.md  analyzer-46.md  analyzer-47.md  analyzer-48.md  analyzer-49.md  analyzer-50.md  analyzer-51.md  analyzer-53.md  analyzer-54.md  analyzer-55.md  analyzer-61.md  analyzer-62.md  analyzer-63.md  analyzer-64.md  analyzer-65.md  analyzer-66.md  analyzer-67.md  analyzer-68.md  analyzer-69.md  analyzer-70.md  analyzer-71.md  analyzer-72.md  analyzer-73.md  analyzer-74.md  analyzer-75.md  analyzer-76.md  analyzer-77.md  analyzer-78.md  analyzer-79.md  explorer-1.md  explorer-10.md  explorer-11.md  (+275 more)
research/docs/.deep-research-1778468401377/: analyzer-10.md  analyzer-26.md  analyzer-27.md  analyzer-28.md  analyzer-30.md  analyzer-31.md  analyzer-32.md  analyzer-33.md  analyzer-34.md  analyzer-35.md  analyzer-43.md  analyzer-45.md  analyzer-46.md  analyzer-47.md  analyzer-48.md  analyzer-49.md  analyzer-50.md  analyzer-51.md  analyzer-52.md  analyzer-53.md  analyzer-54.md  analyzer-55.md  analyzer-56.md  analyzer-57.md  analyzer-58.md  analyzer-59.md  analyzer-6.md  analyzer-60.md  analyzer-61.md  analyzer-62.md  analyzer-63.md  analyzer-64.md  analyzer-65.md  analyzer-67.md  analyzer-69.md  analyzer-7.md  analyzer-71.md  analyzer-72.md  analyzer-73.md  analyzer-74.md  (+298 more)
research/web/: 2026-04-27-jsonc-parser-api.md  2026-04-27-jupyterlab-nbformat-rust-crate.md  2026-04-27-tauri2-ipc-state-plugins.md  2026-05-11-opencode-sdk-headless-session-create.md
scripts/: install-build-deps.mjs  preflight-build-deps.mjs  preflight-tsgo.mjs  tauri-builtin-extension-smoke.mjs  tauri-doc-claim-check.mjs  tauri-package.mjs  tauri-parity-gate.manifest.json  tauri-parity-gate.mjs  tauri-release-ci-check.mjs  tauri-smoke.mjs  tauri-vscode-api-tests.mjs
src-tauri/: Cargo.toml  PACKAGING.md  build.rs  tauri.conf.json
src-tauri/src/: auth_tunnels_adapter.rs  cancellation_manager.rs  cli_adapter.rs  commands.rs  contracts.rs  extension_sidecar.rs  file_service.rs  lib.rs  main.rs  observability.rs  parity_services.rs  protocols.rs  runtime.rs  service_registry.rs  storage_config_service.rs  subscription_manager.rs  terminal_service.rs  workbench_url_resolver.rs
src-tauri/tests/: bridge_command_parity.rs  core_services_parity.rs  terminal_service_parity.rs
src-tauri/www/: index.html
src/vs/platform/tauri/common/: tauriBridge.ts  tauriIpc.ts
src/vs/platform/tauri/test/common/: tauriIpc.test.ts
tauri/: Cargo.toml
tauri/docs/: monaco-integration.md
tauri/docs/adr/: 0001-monaco-renderer.md
tauri/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri/frontend/src/: bridge.ts  build-plugins.ts  main.ts  types.ts
tauri/frontend/src/__tests__/: build-plugins.test.ts  types.test.ts
tauri/frontend/src/workbench/: layout.css  lifecycle.ts  types.ts
tauri/frontend/src/workbench/__tests__/: workbench.test.ts
tauri/frontend/src/workbench/parts/: activityBar.ts  editorArea.ts  panel.ts  sidebar.ts  statusBar.ts  titleBar.ts
tauri/tauri-app/: Cargo.toml  tauri.conf.json
tauri/tauri-app/src/: main.rs
tauri/vscode-base/: Cargo.toml
tauri/vscode-base/src/: cancellation.rs  disposable.rs  errors.rs  event.rs  lib.rs  logging.rs  observable.rs  telemetry.rs  uri.rs
tauri/vscode-extension-host/: Cargo.toml
tauri/vscode-extension-host/src/: lib.rs  sidecar.rs
tauri/vscode-ipc/: Cargo.toml
tauri/vscode-ipc/src/: channel.rs  dispatcher.rs  framing.rs  lib.rs  sync.rs  transport.rs
tauri/vscode-ipc/tests/: round_trip.rs
tauri/vscode-platform/: Cargo.toml
tauri/vscode-platform/src/: authentication.rs  configuration.rs  instantiation.rs  lib.rs  lifecycle.rs  nls.rs  quick_input.rs  registry.rs  search.rs  secrets.rs  storage.rs
tauri/vscode-platform/src/debug/: adapter.rs  framing.rs  mod.rs  protocol.rs  session.rs
tauri/vscode-platform/src/editor/: buffer.rs  decorations.rs  edit.rs  mod.rs  model.rs  position.rs  range.rs  text_model.rs  undo_stack.rs
tauri/vscode-platform/src/files/: disk.rs  mod.rs  service.rs
tauri/vscode-platform/src/lifecycle/: mod.rs
tauri/vscode-platform/src/nls/: mod.rs
tauri/vscode-platform/src/notebook/: data.rs  mod.rs  serializer.rs  tests.rs
tauri/vscode-platform/src/notebook/ipynb/: deserialize.rs  mod.rs  serialize.rs
tauri/vscode-platform/src/registry/: keys.rs
tauri/vscode-platform/src/scm/: errors.rs  git.rs  git_finder.rs  mod.rs  repository.rs
tauri/vscode-platform/src/terminal/: mod.rs  pty.rs
tauri/vscode-platform/src/webview/: csp.rs  mod.rs  registry.rs  uri_scheme.rs  webview.rs
tauri/vscode-server/: Cargo.toml
tauri/vscode-server/src/: lib.rs  server.rs
