[package]
name    = "vscode-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
vscode-base = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
futures     = "0.3"
