[package]
name    = "vscode-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
vscode-base  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
ropey        = { workspace = true }
bitflags     = { workspace = true }
portable-pty = "0.8"
once_cell    = { workspace = true }
regex        = "1"
futures      = "0.3"
uuid         = { workspace = true }
base64       = { workspace = true }
bytes        = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tempfile     = "3"
