[package]
name    = "vscode-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vscode-base     = { workspace = true }
vscode-ipc      = { workspace = true }
vscode-platform = { workspace = true }
tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }
async-trait     = { workspace = true }
